--- a/contact.html
+++ b/contact.html
@@ -77,8 +77,8 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <div class="navbar-nav ms-auto py-0">
         <a href="index.html" class="nav-item nav-link">Home</a>
-        <a href="#" class="nav-item nav-link">About</a>
-        <a href="product.html" class="nav-item nav-link active">Product</a>
+        <a href="contact.html" class="nav-item nav-link">About</a>
+        <a href="product.html" class="nav-item nav-link active">Adopsi</a>
         <a href="https://wa.me/6285777398321" target="_blank"
           class="nav-item nav-link nav-contact bg-primary text-white px-5 ms-lg-5">Contact
           <i class="bi bi-arrow-right"></i></a>
