--- a/about.html
+++ b/about.html
@@ -77,8 +77,8 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
                 <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="product.html" class="nav-item nav-link active">Adopsi</a>
+                <a href="about.html" class="nav-item nav-link active">About</a>
+                <a href="product.html" class="nav-item nav-link">Adopsi</a>
                 <a href="https://wa.me/6285777398321" target="_blank"
                     class="nav-item nav-link nav-contact bg-primary text-white px-5 ms-lg-5">Contact
                     <i class="bi bi-arrow-right"></i></a>
